# kurs2021

./: readme.txt
game/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  game.cmake  main.cpp  test.json
game/Debug/: vc141.idb
game/Debug/game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
game/log/: log.txt
game/lvls/: lvl-0.json  lvl-0.txt  lvl-1.txt  lvl-2.txt  lvl-3.txt
game/src/: Audio.cpp  Audio.h  Game.cpp  Game.h  GameObject.cpp  GameObject.hpp  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Input.cpp  Input.h  Parser.cpp  Parser.h  Project.h  config.json  util.cpp  util.h
